# Its OWN workspace (empty [workspace] table) so this dev/maintenance tool stays
# OUT of the main workspace and `just ci` (`cargo {build,test,clippy} --workspace`).
# Mirrors tools/sshd-probe-update's layout and rationale (#372); see that crate's
# Cargo.toml for the fuller explanation of why the [workspace] table + path-dep
# combination resolves cleanly from a nested, non-member directory.
#
# It path-deps rulesteward-fapolicyd to import shipped grounded facts for the check
# drift gate (#478):
#   - dataset (a) version map: `TargetVersion::fapolicyd_version()` - already `pub`.
#   - dataset (c) fapd-E07 categories: `attrs::type_category_for()` /
#     `attrs::type_category()` - already `pub`, `attrs` is `pub mod`.
#   - dataset (b) `pattern=` accepted-value sets: `accepted_pattern_values()` in
#     `crates/rulesteward-fapolicyd/src/lints/version_target.rs` was made `pub` (and
#     `lints/mod.rs`'s `mod version_target;` -> `pub mod version_target;`) as part of
#     implementing this tool (#478), mirroring how rulesteward-sshd's `registry` /
#     `deprecation` / `structural` modules are `pub mod` so sshd-probe-update can
#     import `known_keywords` / `deprecated_keywords` / `match_permitted_keywords`
#     (#372). Pure visibility change; `RHEL8_PATTERN_VALUES` / `RHEL9_PLUS_PATTERN_VALUES`
#     themselves stay private - only the accessor fn is reachable from outside the crate.
[workspace]

[package]
name = "fapolicyd-probe-update"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Dev tool: probe the prebuilt fapolicyd8/9/10 docker images and drift-check the shipped fapolicyd version-map / pattern= value-set / fapd-E07 type-category tables against them (#478)."

[dependencies]
rulesteward-fapolicyd = { path = "../../crates/rulesteward-fapolicyd" }
