# Its OWN workspace (empty [workspace] table) so this dev/maintenance tool stays
# OUT of the main workspace and `just ci` (`cargo {build,test,clippy} --workspace`).
# It path-deps the sshd crate purely to import the shipped STIG baseline projection
# (`stig_baseline`) for the `check` drift gate; that crate resolves its own workspace
# inheritance against the repo root (cargo finds a package's workspace by walking up
# from the package's OWN location), so the path-dep builds cleanly from here.
[workspace]

[package]
name = "sshd-stig-update"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Dev tool: derive + drift-check the sshd W01/W02 STIG baselines from the official DISA XCCDF."

[dependencies]
rulesteward-sshd = { path = "../../crates/rulesteward-sshd" }
regex = "1"
toml = "1"
