# Its OWN workspace (empty [workspace] table) so this dev/maintenance tool stays
# OUT of the main workspace and `just ci` (`cargo {build,test,clippy} --workspace`).
# It path-deps the sysctld crate purely to import the real STIG baseline tables for
# the `check` drift gate; that crate resolves its own workspace inheritance against
# the repo root (cargo finds a package's workspace by walking up from the package's
# OWN location), so the path-dep builds cleanly from here.
[workspace]

[package]
name = "stig-update"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Dev tool: derive + drift-check the sysctld STIG baselines from ComplianceAsCode."

[dependencies]
rulesteward-sysctld = { path = "../../crates/rulesteward-sysctld" }
yaml-rust2 = "0.11"
toml = "1"
